$Id$
---------------------------------------------------------------------------

Version 0.2.2 (...)

- Unicode-related changes to permit sqlcmd to handle databases with
  non-ASCII characters. Thanks to Stephane Matamontero (sm /at/ campoint.net)
  for noting the problem and submitting a patch.
- Fixed a problem with history management and multiline commands.

---------------------------------------------------------------------------
Version 0.2.1 (18 July, 2008)

- Now supports the ipython pyreadline module on Windows, allowing sqlcmd
  to work on Windows properly.
- Explicit support for ALTER statement, to permit table completion.

---------------------------------------------------------------------------
Version 0.2 (17 July, 2008)

- "@" is no longer an alias for ".load". It's too complicated to support.
- ".load" will now do file-name completion on its argument, including
  tilde expansion.
- Made more improvements to tab-completion, especially for dot (".") commands.
- Documented how extended (unrecognized) commands are handled.
- Fixed log handling.
- Some other internal cleanup.

---------------------------------------------------------------------------
Version 0.1.2 (17 July, 2008)

- Fixed parsing error with the "@" command.
- Dot (".") commands now show up properly in help.
- Added tab completion to various commands. For instance:
  * ".<TAB>" shows the "." commands
  * ".set <TAB>" shows the variables you can set
  * ".set variable <TAB>" shows the legal values for the variable
  * ".connect <TAB>" shows all the database aliases in the config file
  * "select * from <TAB>" shows the tables in the current database.
    (So does "select <TAB>", actually.) This works for all SQL commands.
  * ".history <TAB>" shows the commands in the history.
    ".history s<TAB>" shows the names of all commands in the history
    beginning with "s"
  etc.

---------------------------------------------------------------------------
Version 0.1.1 (17 July, 2008)
